unpackaged/main/default/objects/Fleet__c/Fleet__c.object-meta.xml
<CustomObject>
    <description>Object used for SAP integration.</description>
    <label>Fleet</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>