unpackaged/main/default/objects/Fleet__c/fields/Alternate_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Identifier__c</fullName>
    <description>SND - HLS ID</description>
    <label>Alternate Identifier</label>
    <length>32</length>
    <type>Text</type>
</CustomField>