unpackaged/main/default/objects/Fleet__c/fields/Asset_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Asset_Capacity__c</fullName>
    <description>SND - Asset Capacity</description>
    <label>Asset Capacity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>