unpackaged/main/default/objects/Fleet__c/fields/Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category__c</fullName>
    <label>Asset Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>