unpackaged/main/default/objects/Fleet__c/fields/Asset_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category_Name__c</fullName>
    <description>SND - Asset Category</description>
    <label>Asset Category Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>