unpackaged/main/default/objects/Fleet__c/fields/Asset_Energy_Efficiency_Desctiption__c.field-meta.xml
<CustomField>
    <fullName>Asset_Energy_Efficiency_Desctiption__c</fullName>
    <description>SND - Asset Energy Efficiency</description>
    <label>Asset Energy Efficiency Desctiption</label>
    <length>30</length>
    <type>Text</type>
</CustomField>