unpackaged/main/default/objects/Fleet__c/fields/Asset_Frame_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Frame_Type_Description__c</fullName>
    <description>SND - Asset Frame Type</description>
    <label>Asset Frame Type Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>