unpackaged/main/default/objects/Fleet__c/fields/Asset_Group__c.field-meta.xml
<CustomField>
    <fullName>Asset_Group__c</fullName>
    <label>Asset Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>