unpackaged/main/default/objects/Fleet__c/fields/Asset_Heating_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Heating_Type__c</fullName>
    <label>Asset Heating Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>