unpackaged/main/default/objects/Fleet__c/fields/Asset_Heating_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Heating_Type_Code__c</fullName>
    <description>SND - Asset Heating Type</description>
    <label>Asset Heating Type Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>