unpackaged/main/default/objects/Fleet__c/fields/Asset_Heating_Type_Decription__c.field-meta.xml
<CustomField>
    <fullName>Asset_Heating_Type_Decription__c</fullName>
    <description>SND - Asset Heating Type</description>
    <label>Asset Heating Type Decription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>