unpackaged/main/default/objects/Fleet__c/fields/Asset_Kitchen_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Kitchen_Type_Description__c</fullName>
    <description>SND - Asset Kitchen Type</description>
    <label>Asset Kitchen Type Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>