unpackaged/main/default/objects/Fleet__c/fields/Asset_Length__c.field-meta.xml
<CustomField>
    <fullName>Asset_Length__c</fullName>
    <description>SND - Asset Length</description>
    <label>Asset Length</label>
    <length>30</length>
    <type>Text</type>
</CustomField>