unpackaged/main/default/objects/Fleet__c/fields/Asset_Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Module_Type__c</fullName>
    <description>SND - Asset Module Type</description>
    <label>Asset Module Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>