unpackaged/main/default/objects/Fleet__c/fields/Asset_Module_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Module_Type_Code__c</fullName>
    <description>SND - Asset Module Type</description>
    <label>Asset Module Type Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>