unpackaged/main/default/objects/Fleet__c/fields/Asset_Module_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Module_Type_Description__c</fullName>
    <description>SND - Asset Module Type</description>
    <label>Asset Module Type Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>