unpackaged/main/default/objects/Fleet__c/fields/Asset_Number_of_Beds__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number_of_Beds__c</fullName>
    <description>SND - Asset Number of Beds</description>
    <label>Asset Number of Beds</label>
    <length>100</length>
    <type>Text</type>
</CustomField>