unpackaged/main/default/objects/Fleet__c/fields/Asset_Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number_of_Units__c</fullName>
    <description>SND - Asset Number of Units</description>
    <label>Asset Number of Units</label>
    <length>100</length>
    <type>Text</type>
</CustomField>