unpackaged/main/default/objects/Fleet__c/fields/Asset_Plumbing_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Plumbing_Type__c</fullName>
    <label>Asset Plumbing Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>