unpackaged/main/default/objects/Fleet__c/fields/Asset_Plumbing_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Plumbing_Type_Code__c</fullName>
    <description>SND - Asset Plumbing Type</description>
    <label>Asset Plumbing Type Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>