unpackaged/main/default/objects/Fleet__c/fields/Asset_Plumbing_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Plumbing_Type_Description__c</fullName>
    <description>SND - Asset Plumbing Type</description>
    <label>Asset Plumbing Type Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>