unpackaged/main/default/objects/Fleet__c/fields/Asset_Size__c.field-meta.xml
<CustomField>
    <fullName>Asset_Size__c</fullName>
    <label>Total Square Feet</label>
    <length>100</length>
    <type>Text</type>
</CustomField>