unpackaged/main/default/objects/Fleet__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>Hierarchy Decription</description>
    <label>Asset Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>