unpackaged/main/default/objects/Fleet__c/fields/Asset_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type_Description__c</fullName>
    <description>Hierarchy Decription</description>
    <label>Asset Type Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>