unpackaged/main/default/objects/Fleet__c/fields/Asset_Type_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type_Grouping__c</fullName>
    <description>Hierarchy Grouping</description>
    <label>Asset Type Grouping</label>
    <length>100</length>
    <type>Text</type>
</CustomField>