unpackaged/main/default/objects/Fleet__c/fields/Asset_Type_Series__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type_Series__c</fullName>
    <description>SND - Asset Type Series</description>
    <label>Asset Type Series</label>
    <length>100</length>
    <type>Text</type>
</CustomField>