unpackaged/main/default/objects/Fleet__c/fields/Asset_Type_Series_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type_Series_Number__c</fullName>
    <description>SND - Asset Type Series</description>
    <label>Asset Type Series Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>