unpackaged/main/default/objects/Fleet__c/fields/Asset_Use_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Use_Type__c</fullName>
    <description>SND - Asset Use Type</description>
    <label>Asset Use Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>