unpackaged/main/default/objects/Fleet__c/fields/Asset_Use_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Use_Type_Description__c</fullName>
    <description>SND - Asset Use Type</description>
    <label>Asset Use Type Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>