unpackaged/main/default/objects/Fleet__c/fields/Asset_Width__c.field-meta.xml
<CustomField>
    <fullName>Asset_Width__c</fullName>
    <description>SND - Asset Width</description>
    <label>Asset Width</label>
    <length>30</length>
    <type>Text</type>
</CustomField>