unpackaged/main/default/objects/Fleet__c/fields/Asset_Wind_Region_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Wind_Region_Description__c</fullName>
    <description>SND - Asset Wind Region</description>
    <label>Asset Wind Region Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>