unpackaged/main/default/objects/Fleet__c/fields/BC_Reduced_PST_Rate__c.field-meta.xml
<CustomField>
    <fullName>BC_Reduced_PST_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC Reduced PST Rate</label>
    <type>Checkbox</type>
</CustomField>