unpackaged/main/default/objects/Fleet__c/fields/BD_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>BD_Unit_Number__c</fullName>
    <description>SND - Serial Number</description>
    <label>BD Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>