unpackaged/main/default/objects/Fleet__c/fields/Bulk_Asset__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Asset</label>
    <type>Checkbox</type>
</CustomField>