unpackaged/main/default/objects/Fleet__c/fields/Bulk_Asset_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Asset_Quantity__c</fullName>
    <label>Bulk Asset Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>