unpackaged/main/default/objects/Fleet__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code​</label>
    <length>225</length>
    <type>Text</type>
</CustomField>