unpackaged/main/default/objects/Fleet__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Subsidiary</label>
    <length>150</length>
    <type>Text</type>
</CustomField>