unpackaged/main/default/objects/Fleet__c/fields/Complex__c.field-meta.xml
<CustomField>
    <fullName>Complex__c</fullName>
    <description>Indicates whether or not the Fleet record is a complex shell</description>
    <inlineHelpText>Indicates whether or not the Fleet record is a complex shell</inlineHelpText>
    <label>Complex</label>
    <length>3</length>
    <type>Text</type>
</CustomField>