unpackaged/main/default/objects/Fleet__c/fields/Complex_Area__c.field-meta.xml
<CustomField>
    <fullName>Complex_Area__c</fullName>
    <formula>IF( Complex__c = 'Yes',Unit_Length__c *  Unit_Width__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complex Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>