unpackaged/main/default/objects/Fleet__c/fields/Complex_Parent_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Complex_Parent_Unit_Number__c</fullName>
    <label>Complex Parent Unit Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>