unpackaged/main/default/objects/Fleet__c/fields/Complex_Reference__c.field-meta.xml
<CustomField>
    <fullName>Complex_Reference__c</fullName>
    <description>Reference number for complexed units</description>
    <label>Complex Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>