unpackaged/main/default/objects/Fleet__c/fields/Complex_Serial_number__c.field-meta.xml
<CustomField>
    <fullName>Complex_Serial_number__c</fullName>
    <label>Complex Serial number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>