unpackaged/main/default/objects/Fleet__c/fields/Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Contract_End__c</fullName>
    <description>Contract End Date (Job Master)</description>
    <label>Contract End</label>
    <length>50</length>
    <type>Text</type>
</CustomField>