unpackaged/main/default/objects/Fleet__c/fields/CountUsed__c.field-meta.xml
<CustomField>
    <fullName>CountUsed__c</fullName>
    <label>Count Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>