unpackaged/main/default/objects/Fleet__c/fields/Current_Contract__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Fleet</relationshipLabel>
    <relationshipName>Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>