unpackaged/main/default/objects/Fleet__c/fields/Current_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Number__c</fullName>
    <label>Current Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>