unpackaged/main/default/objects/Fleet__c/fields/Current_Net_Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Net_Book_Value__c</fullName>
    <label>Current Net Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>