unpackaged/main/default/objects/Fleet__c/fields/Division_Branch__c.field-meta.xml
<CustomField>
    <fullName>Division_Branch__c</fullName>
    <description>SND - Warehouse (Less-R)</description>
    <label>Division/Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>