unpackaged/main/default/objects/Fleet__c/fields/Expected_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Receipt_Date__c</fullName>
    <label>Expected Receipt Date</label>
    <type>Date</type>
</CustomField>