unpackaged/main/default/objects/Fleet__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <description>Type of Flooring</description>
    <label>Floor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>