unpackaged/main/default/objects/Fleet__c/fields/Future_Proposed_Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Future_Proposed_Asset_Status__c</fullName>
    <label>Future/Proposed Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Returning</fullName>
            </value>
            <value>
                <fullName>MtoM</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Expiring Soon</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>