unpackaged/main/default/objects/Fleet__c/fields/Future_Proposed_Asset_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Future_Proposed_Asset_Status_Formula__c</fullName>
    <description>To be used in the Salesforce Fleet Query Report as a grouping factor</description>
    <formula>TEXT(Future_Proposed_Asset_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future/Proposed Asset Status</label>
    <type>Text</type>
</CustomField>