unpackaged/main/default/objects/Fleet__c/fields/Lease_Factor__c.field-meta.xml
<CustomField>
    <fullName>Lease_Factor__c</fullName>
    <formula>IF(OR(Current_Lease_Rate__c = 0,ISPICKVAL(Future_Proposed_Asset_Status__c,'Unknown')),0,Current_Lease_Rate__c/Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>