unpackaged/main/default/objects/Fleet__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <label>Location Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>