unpackaged/main/default/objects/Fleet__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <label>Location Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>