unpackaged/main/default/objects/Fleet__c/fields/Manufacturers_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Manufacturers_Serial_Number__c</fullName>
    <description>SND - Mfr Serial No.</description>
    <label>Manufacturers Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>