unpackaged/main/default/objects/Fleet__c/fields/NBV__c.field-meta.xml
<CustomField>
    <fullName>NBV__c</fullName>
    <description>Netbook Value</description>
    <label>NBV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>