unpackaged/main/default/objects/Fleet__c/fields/New_ID__c.field-meta.xml
<CustomField>
    <fullName>New_ID__c</fullName>
    <description>New ID field to use interim, for mapping Serial+SAP database</description>
    <label>New ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>