unpackaged/main/default/objects/Fleet__c/fields/NS_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>NS_Activity_Code__c</fullName>
    <label>NS Activity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>