unpackaged/main/default/objects/Fleet__c/fields/NS_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Internal_ID__c</fullName>
    <label>NS Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>