unpackaged/main/default/objects/Fleet__c/fields/NS_Product__c.field-meta.xml
<CustomField>
    <fullName>NS_Product__c</fullName>
    <label>NS Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>