unpackaged/main/default/objects/Fleet__c/fields/Partition__c.field-meta.xml
<CustomField>
    <fullName>Partition__c</fullName>
    <description>Number &amp; Configuration of partitions</description>
    <label>Partition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>