unpackaged/main/default/objects/Fleet__c/fields/PB_NPB__c.field-meta.xml
<CustomField>
    <fullName>PB_NPB__c</fullName>
    <label>PB/NPB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>