unpackaged/main/default/objects/Fleet__c/fields/Price_Code__c.field-meta.xml
<CustomField>
    <fullName>Price_Code__c</fullName>
    <description>SAP SND field for the pricing code.  Normally in the format of SO1260-T2 or SO1260-WT</description>
    <inlineHelpText>SAP SND field for the pricing code.  Normally in the format of SO1260-T2 or SO1260-WT</inlineHelpText>
    <label>Price Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>