unpackaged/main/default/objects/Fleet__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related product for this fleet item</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fleet</relationshipLabel>
    <relationshipName>Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>