unpackaged/main/default/objects/Fleet__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <inlineHelpText>Product code from the corresponding product</inlineHelpText>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>