unpackaged/main/default/objects/Fleet__c/fields/Rental_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Return_Date__c</fullName>
    <label>Rental Return Date</label>
    <type>Date</type>
</CustomField>