unpackaged/main/default/objects/Fleet__c/fields/Rental_Status__c.field-meta.xml
<CustomField>
    <fullName>Rental_Status__c</fullName>
    <label>Rental Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>