unpackaged/main/default/objects/Fleet__c/fields/Replacement_Value__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Value__c</fullName>
    <label>Replacement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>