unpackaged/main/default/objects/Fleet__c/fields/Short_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Short_Serial_No__c</fullName>
    <description>Short Serial No from SAP</description>
    <inlineHelpText>Short Serial No from SAP</inlineHelpText>
    <label>Short Serial No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>