unpackaged/main/default/objects/Fleet__c/fields/SND_Location__c.field-meta.xml
<CustomField>
    <fullName>SND_Location__c</fullName>
    <label>SND Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>