unpackaged/main/default/objects/Fleet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>On Rent/Off Rent</description>
    <label>Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>