unpackaged/main/default/objects/Fleet__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <description>Unit Number from IMD in SAP - this matches the product code</description>
    <inlineHelpText>Unit Number from IMD in SAP - this matches the product code</inlineHelpText>
    <label>Unit Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>