unpackaged/main/default/objects/Fleet__c/fields/Unit_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Serial_Number__c</fullName>
    <formula>Name</formula>
    <label>Unit Serial Number</label>
    <type>Text</type>
</CustomField>