unpackaged/main/default/objects/Fleet__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>