unpackaged/main/default/objects/Fleet__c/fields/Unit_Width__c.field-meta.xml
<CustomField>
    <fullName>Unit_Width__c</fullName>
    <label>Unit Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>