unpackaged/main/default/objects/Fleet__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>225</length>
    <type>Text</type>
</CustomField>