unpackaged/main/default/objects/Fleet__c/fields/WIP_Asset__c.field-meta.xml
<CustomField>
    <fullName>WIP_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WIP Asset</label>
    <type>Checkbox</type>
</CustomField>