unpackaged/main/default/objects/Fleet__c/fields/Year_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Manufacture__c</fullName>
    <description>SND - Year</description>
    <label>Year of Manufacture</label>
    <length>8</length>
    <type>Text</type>
</CustomField>